
S#arp 7.0.0
========================

BREAKING:
* Removed EntityWithTypedId<> replaced with Entity<>, removed old entity class. Fix: replace `Entity` with `Entity<int>`.
* Renamed IAsyncRepository to IRepository.
* Added IEquatable<TId> constraint on IEntity<TId>.
* IRavenDbRepository.FindAllAsync now returns Task<TEntity[]>, not Task<IEnumerable<TEntity>>.
* Removed IRavenDbRepository.Session.

IMPROVEMENTS:
* TransactionAttribute now implements Equitable<>

S#arp 6.1.1
========================

FIXES:
 * #245: Exception in DependencyList on .NET 5/Linux

========================
S#arp 6.1
========================
NEW FEATURES:
* .NET 5 support.

IMPROVEMENTS:
* Debug information now published as a symbol package to reduce build time and space used.
* Use tokens instead of credentials in build script.


========================
S#arp 6.0
========================

BREAKING CHANGES:
* Removed HasUniqueDomainSignatureWithGuidIdAttribute.
* Removed HasUniqueDomainSignatureWithStringIdAttribute.
* Added IEquatable<TId> constraint on IEntityWithTypedId<TId>.
* Removed synchronous methods from repositories.

NEW FEATURES:
* SharpArch.NHibernate.DependencyInjection package.
* Asynchronous Transaction Manager.
* ASP.NET Core 3 / NetStandard2.1 support.

IMPROVEMENTS:
* More control over NHibernate configuration.

NEW FEATURES:
* SharpArch.NHibernate.DependencyInjection package;
* ASP.NET 3 / NetStandard2.1 support;


========================
S#arp 5.0
========================

BREAKING CHANGES:
* NetStandard2.0 support.
* Dropped Castle.Windsor integration for ASP.NET.
* New package SharpArch.Testing extracted from SharpArch.Testing.NUnit.
* SharpArch.NHibernate: NHibernateRepository.FindAll() now accepts IReadOnlyDictionary<> instead of IDictionary<>.
* SharpArch.Testing.NUnit renamed to SharpArch.Testing.NUnit.NHibernate:
  * ISession.FlushAndEvict moved to SharpArch.NHibernate;
* Removed class SharpArch.Domain.FileCache;