@@ -3,21 +3,23 @@
     <Product>Sharp Architecture</Product>
     <Authors>Sharp Architecture Dev Team</Authors>
 
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>portable</DebugType>
 
-    <LangVersion>9.0</LangVersion>
+    <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <IsTestProject>false</IsTestProject>
+
+    <NoWarn>$(NoWarn);0105</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Label="Custom targets">
     <!-- target frameworks for unit-tests and applications -->
-    <AppTargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0</AppTargetFrameworks>
+    <AppTargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0;net6.0</AppTargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -57,9 +59,18 @@
     <NoWarn>$(NoWarn);0618;1591</NoWarn>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(MSBuildProjectFullPath.Contains(Sample))' == true  ">
+  <PropertyGroup Condition="'$(MSBuildProjectFullPath.Contains(Sample))' == true">
     <IsPackable>false</IsPackable>
     <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1' or '$(TargetFramework)' == 'net5.0' or '$(TargetFramework)' == 'net6.0'">
+    <DefineConstants>$(DefineConstants);NET3UP</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <DefineConstants>$(DefineConstants);NET3UP</DefineConstants>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
 </Project>
