@@ -42,7 +42,7 @@ namespace Suteki.TardisBank.WebApi
         /// <param name="services"></param>
         public void ConfigureServices(IServiceCollection services)
         {
-#if NETCOREAPP3_1 || NET5_0
+#if NET3UP
             services.AddControllers(options => { options.Filters.Add(new AutoTransactionHandler()); })
                 .AddNewtonsoftJson();
 
@@ -86,7 +86,7 @@ namespace Suteki.TardisBank.WebApi
         /// <param name="app"></param>
         public void Configure(IApplicationBuilder app)
         {
-#if NETCOREAPP3_1 || NET5_0
+#if NET3UP
             app.UseRouting();
             app.UseAuthorization();
             app.UseEndpoints(endpoints => { endpoints.MapControllers(); });
