@@ -1,13 +1,0 @@
-﻿using System.Runtime.CompilerServices;
-
-[assembly: InternalsVisibleTo("SharpArch.Domain")]
-[assembly: InternalsVisibleTo("SharpArch.NHibernate")]
-[assembly: InternalsVisibleTo("SharpArch.NHibernate.Extensions.DependencyInjection")]
-[assembly: InternalsVisibleTo("SharpArch.RavenDb")]
-[assembly: InternalsVisibleTo("SharpArch.Web.AspNetCore")]
-[assembly: InternalsVisibleTo("SharpArch.WebApi")]
-[assembly: InternalsVisibleTo("SharpArch.Testing")]
-[assembly: InternalsVisibleTo("SharpArch.Tests")]
-[assembly: InternalsVisibleTo("SharpArch.Tests.NHibernate")]
-[assembly: InternalsVisibleTo("SharpArch.XunitTests")]
-[assembly: InternalsVisibleTo("SharpArch.XunitTests.NHibernate")]
