@@ -33,7 +33,9 @@ cache:
 
 install:
   - ps: ./mssql-setup.ps1
-  - ps: dotnet tool install Cake.Tool --version 1.1.0 --global
+  - ps: ./dotnet-install.ps1 -Version 6.0.100-preview.7.21379.14 -InstallDir "C:\Program Files\dotnet"
+  - ps: dotnet new tool-manifest
+  - ps: dotnet tool install Cake.Tool --version 1.2.0
 
 build_script:
   - ps: dotnet cake
