@@ -1,0 +1,5 @@
+{
+  "sdk": {
+    "version": "6.0.100-preview.7.21379.14"
+  }
+}
